--- a/chapter2.qmd
+++ b/chapter2.qmd
@@ -40,9 +40,9 @@ Despite all this careful attention, Appendix 2 should be considered a good but f
 
 Transcribing each copy of Version T has presented unique challenges, and encoding each copy has required thousands of individual judgment calls.[^114] Now, each copy of Version T is both human *and* machine-readable with the addition of the following tags:
 
-- **Folio numbers** are indicated with tags like `<pb n="8r"/>` where ‘pb’ stands for ‘page beginning’ and the ‘n’ attribute is equal to the manuscript folio number — in this case, folio 8 recto of copy T-F^1^.^[An ‘attribute’ is a piece of additional information that appears inside a tag to provide even more detail about the element the tag describes. Attributes always take the form of a name-value pair, like n=“8r”, where ‘n’ is the name of the attribute and ‘8r’ is its value. Attributes help encode specific, structured information within a tag, making it easier for both humans and computers to interpret the file accurately.] This tag helps situate the encoded text spatially within the source manuscript — information that can be useful for cross-referencing with images, analyzing page layout, or generally understanding the structure of the codex.
+- **Folio numbers** are indicated with tags like `<pb n="8r"/>` where ‘pb’ stands for ‘page beginning’ and the ‘n’ attribute is equal to the manuscript folio number — in this case, folio 8 recto of copy T-F^1^.[^115] This tag helps situate the encoded text spatially within the source manuscript — information that can be useful for cross-referencing with images, analyzing page layout, or generally understanding the structure of the codex.
 - **Columns** are tagged with `<cb/>` (“column beginning”). Although it was easy to tag columns in the XML files, actually rendering visible column breaks in Appendix 2 was an unanticipated technical hurdle to resolve. Nonetheless, the inclusion of these column breaks serves the valuable dual purposes of emphasizing the manuscripts’ original layout and improving the readability of each copy.
-- **Verses** are tagged with the start and end tags `<l>` and `</l>`, and line breaks as they appear in the manuscript are tagged with `<lb/>` .^[Some XML tags simply mark a point in the text — like `<lb/>`, which indicates a line break and does not enclose any content. These are called ‘empty elements’ and are written as self-closing tags. Other tags, like `<l>` and `</l>`, are used to wrap around content that belongs together — in this case, a single line of poetic verse. These are known as ‘container elements’ or ‘paired tags’, and they must always follow a strict hierarchical structure: one tag must be fully closed before another is opened. This structure allows software to read and interpret the document accurately, but it also creates challenges when features in the source text overlap in ways that do not fit neatly into this hierarchy.] In every copy except for T-B and T-F^1^, the ends of each verse align with the line breaks in the manuscript. But in T-F^1^ in particular, the disruption of individual words by line breaks in the manuscript causes the technical issue of irregular nesting, which can invalidate the XML file.^[In XML, every tag must be properly ‘nested’ — that is, container tags must open and close in clearly ordered, non-overlapping sequence. For example, if one tag begins inside another, it must also end inside it, like a set of Russian stacking dolls. Irregular nesting, then, violates the rules of XML and causes the file to be invalid, meaning it cannot be processed by the software trying to read it.] This small issue demonstrates one of the technical limits of TEI guidelines in electronically representing the complexities of medieval manuscript documents, which were never designed to conform to digital logic.^[Folio numbers in the Appendix 2 are rendered directly from the tags encoded in the XML files, but the numbering of verses for each manuscript copy is generated automatically through a line counting function built into the R code of this dissertation. (R is a free, open-source programming language commonly used for data analysis, visualization, and digital text processing. I used R in this dissertation to author the code that processes my XML files, preparing them for digital display.) The *Rose DL* offers a model for how to address the problem of numbering, citing, and cross referencing verses in variant manuscript copies by using a system in which narrative sections are numbered rather than their individual verses. It could be useful to adopt this method in future iterations of this digital edition.]
+- **Verses** are tagged with the start and end tags `<l>` and `</l>`, and line breaks as they appear in the manuscript are tagged with `<lb/>`.[^116] In every copy except for T-B and T-F^1^, the ends of each verse align with the line breaks in the manuscript. But in T-F^1^ in particular, the disruption of individual words by line breaks in the manuscript causes the technical issue of irregular nesting, which can invalidate the XML file.[^117] This small issue demonstrates one of the technical limits of TEI guidelines in electronically representing the complexities of medieval manuscript documents, which were never designed to conform to digital logic.[^118]
 - **Decorative elements** such as the large floriated first letters of each copy are tagged with `<emph>` for ‘emphasized.’ The initial letter from the XML file for copy T-A, for instance, is tagged like this: `<emph n="6" rend="floriate">O</emph>` where the ‘n’ attribute equals ‘6’ because the initial ‘O’ is six ruled lines tall in the manuscript and the style of the initial is ‘floriate.’ In Appendix 2, these letters are rendered proportionally to their appearance in the source manuscript. Rendering this sort of decorative element helps to catch the digital reader’s eye in the same way that such initials catch the manuscript reader’s eye, drawing attention to the beginnings of new sections of the narrative and to the unique features of each manuscript.
 - **Proper names** are tagged with `<name>` and the attribute ‘type’ to indicate if the proper name refers to a ‘character,’ ‘saint,’ ‘god,’ or ‘devil.’ For example, in the eleventh verse of T-A, Mary’s name is tagged like this: `<name type="saint">Marie</name>`
 - **Editorial interventions** have been tagged as `<choice>` elements so that both the original text of the manuscript (`<orig>`) and the regularization of the text (`<reg>`) can be encoded together, enabling a more dynamic rendering of the text in the digital edition. This tagging has been used to indicate interventions such as spelling regularization and the defining of word separation with spaces or the addition of apostrophes. For example in the fourth verse of T-F^1^, the word *ni* is actually the contraction *n’i* (a blend of *ne* and *i*) and has been tagged like this: `<choice><orig>ni</orig><reg>n'i</reg></choice>`
@@ -54,10 +54,10 @@ Reproducibility was likewise a key motivating factor in determining how best to 
 
 Building on this commitment to transparency and reproducibility, Appendix 2 of this dissertation uses the XML encoding and R code to implement a multi-column layout that displays each manuscript copy of Version T in full, featuring varying levels of editorial intervention presented in parallel. This layout is designed to allow readers to more easily observe the transformation of the text through the editorial process and to highlight the decisions made in adapting the text for a modern audience.[^121] In doing so, it helps address the “crisis of confidence” (19-28) that Foulet and Speer identify as a persistent reality in the history of Old French editorial practice, in which readers are reliant on the imperfect work of editors, and editors are in turn reliant on the imperfect work of scribes to approach any given medieval text. Each column in this layout is labeled to reflect the degree of intervention applied, ranging from ‘Nearly Diplomatic’ to ‘Minimal,’ ‘Intermediate,’ and ‘Extensive’:
 
-- **Nearly Diplomatic:** For manuscripts T-B and T-F^1^, where the text does not conform to standard verse lineation, this supplemental column has been added, presenting the unique way each copy was formatted on the page — T-B with two verses per ruled line separated by a punctus and T-F^1^ in a continuous prose-like style with a punctus inserted to mark the end of each verse. These ‘Nearly Diplomatic’ columns present a transcription with the ‘Minimal’ level of editorial intervention but allow the additional benefit of helping the reader visualize the text as it appears on each manuscript page. With this layout, readers may more easily differentiate between decisions the copyists might have made based on the constraints of their page layout as opposed to their interpretations of the verse. T-F^1^ has been digitized, making it easier to cross-reference the edited transcript with the source manuscript, but T-B has not been digitized, so this column provides a particularly useful supplement to existing resources concerning T-B.^[The case of copy T-B exemplifies the argument made in Chapter 1 (section 1. Fetishism and Idolatry) that digital resources supplement rather than supplant material ones. As described in Appendix 1, the physical manuscript of T-B (MS Canonici Misc. 74) is available for consultation in person in the Bodleian Libraries reading room, but most readers will never encounter it directly. At present, there are no widely available photographic reproductions of this manuscript — no digital facsimile, microfilm, or any other form of image available even for purchase — so the ‘Nearly Diplomatic’ transcription provided here offers detailed information about the structure of this copy currently unavailable anywhere else.]
-- **Minimal:** This column closely mirrors the manuscript’s original text while implementing minor regularizations for clarity — regularizations that do not require situation-specific choices. Thus the letters u/v and i/j are standardized, and proper names like *Marie* and *Deu* are capitalized. Initial and final letter separation is not represented. However, word spacing and punctuation in this column match the original manuscript.^[For example, copy T-B uses a punctus to separate the verses of each couplet; T-C uses a punctus to indicate the end of every couplet; and fragment T-F^1^ places a punctus at the end of every verse.] At this stage of the project, the only abbreviation marks represented throughout Appendix 2 are ampersands (&) — standing in for all ‘et’ symbols — and the scribal abbreviation for both ‘con’ and ‘com’ (ꝯ).^[More abbreviation marks have been added to the excerpt of copy T-E featured below to demonstrate how it is technically possible to render special medieval characters in a digital edition. Future iterations of this project will include such special characters throughout.] This minimal level of intervention allows the edited text to remain as faithful as possible to its material source while improving basic readability.
-- **Intermediate:** In this column, all scribal abbreviations that have been tagged in the XML files are expanded.^[Systematically encoding both scribal abbreviations and their expansions is essential not only for accurate transcription but also for enabling deeper forms of scholarly analysis. As Alpo Honkapohja argues in his review of digital approaches to manuscript abbreviations, these features are far more than incidental scribal shortcuts. Abbreviation practices vary meaningfully across time period, geographic region, text genre, and intended audience, and therefore, are incredibly useful for the dating and localising of manuscripts. Abbreviations can provide instructions on pronunciation norms in both Latin and vernacular texts (para. 44), and most crucially, abbreviation patterns can be used to help establish scribal profiles — a key tool in dating and localizing manuscripts (para. 45). Despite this potential, Honkapohja notes that most digital transcriptions still do not systematically encode abbreviation data, making it difficult to extract or analyze this information at scale. “In order to study abbreviations quantitatively, we need to count them somehow” (para. 50), and so, Honkapohja prescribes the sort of text encoding practice that I have applied to this dissertation: “Studying abbreviations quantitatively requires digital transcriptions that encode the forms of abbreviation as well as their expansions. While many earlier corpora were based on printed books, the situation is improving” (para. 55). Similarly, edited transcriptions do not typically include marginalia, which Adrien Quéret-Podesta (2020) argues may be useful for the dating and localizing of manuscripts. I have not included marginalia in the digital transcriptions for this dissertation — the T copies have almost no marginalia to speak of anyway apart from rubricator notes that I describe in Appendix 1. — but other similar projects might take the usefulness of encoded marginalia into consideration.] For example, the abbreviation `<abbr><orig>Bn</orig></abbr>`  in verse 5 of T-F^1^ becomes `<expan><reg>Bien</reg></expan>`, rendering as “Bien” in Appendix 2. However, all ‘et’ symbols have been left unexpanded since abbreviating this conjunction is still commonly done today and, therefore, does not impede the modern reader’s ability to read the text or a computer’s ability to extract information from this common abbreviation.^[At this stage in the project, all ‘et’ symbols in Appendix 2 are represented using ampersands (&), but in the excerpt of T-E below, I have used the Tironian *et* (with a horizontal stroke) instead to more closely represent the manuscript copy. The Tironian *et* is used in the ‘Minimal’ and ‘Intermediate’ columns, and in the ‘Extensive’ column these ‘et’ symbols are replaced with ampersands to better meet the expectations of modern readers.] Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words. Other editorial choices such as spacing, spelling, or punctuation are excluded at this level, which focuses solely on the expansion of abbreviations.
-- **Extensive:** The rightmost column of each page in the appendix includes the most extensive level of editorial intervention, regularizing word separation (with spaces and apostrophes) and — very rarely — regularizing spelling.^[For example in copy T-A v.935, the scribe initially wrote “vull” instead of “vuel” and corrected their mistake by copying an ‘e’ over the incorrect first ‘l.’ My presentation of this verse as “vuel” in the ‘Extensive’ column and “vull” in the ‘Minimal’ and ‘Intermediate’ columns mirrors the scribe’s own correction process to align this word with its proper spelling found in the rest of T-A (vv.55, 243, & 1084). Dembowski chose to correct this verse too, but he has not indicated this scribal error and correction with any note to the reader. I, also, do not comment individually on such changes, but because each alteration may be recognized by reading across the multi-column format and referring to the digitized manuscript (where available), the reader may more easily notice these correction events and probe deeper if interested.] The diacritical marks ‘é’ (‘e’ with an *accent aigu*) and ‘ç’ (‘c’ with the *cédille*) have been added where necessary in this column to help differentiate between homographs.^[The decision to insert only the ‘é’ (‘e’ with an *accent aigu*) and ‘ç’ (‘c’ with the *cédille*)  is somewhat conservative in approach, but is generally supported by the advice of both Foulet and Speer (1979) and Vieillard and Guyotjeannin (2001). Both describe the use of these diacritical marks to help avoid confusion between homographs, but Foulet and Speer note that — like all editing decisions — inserting accent marks is a subjective decision: “...it must be admitted that any one of these editorial intentions may at times run counter to some well-established convention” (67). Vieillard and Guyotjeannin likewise support the use of the *accent aigu* and reject the use of the *accent grave* and the *accent circonflexe* on any vowel (48). However, they advise that the ‘é’ is not necessary for the feminine past participle — ending in ‘-ee’ or sometimes ‘-eee’ or even ‘-ie’ in Picard texts — because the word in context makes its function and pronunciation clear enough (Vieillard & Guyotjeannin 49). There is less consensus though on the best use of the *tréma*: “The judicious use of the *tréma* for Old French texts has long been a perplexing problem” (Foulet & Speer 69). The *tréma* is primarily used to indicate meter and phonetics, and so, Vieillard and Guyotjeannin suggest that the rhyme and meter of verse texts “permettent un emploi plus large du tréma” (52), but they do provide a list of select cases in which the *tréma* may nevertheless remain useful in verse (52-53). Foulet and Speer also highlight the issue of publishing technologies influencing the editor’s decision to make use of the *tréma* or not: “In *Romania*, 52, 245-46, [Mario] Roques [(1875-1961)] declared that editors should avoid placing a tréma on the first vowel of *oe* or *oé* because printers do not always have an *ö* at their disposal. This piece of advice is followed by a confusing discussion of what to do once *ö* has been rejected. Nevertheless, the simplest course is to place the tréma on the *o*…” (72). Although digital editions largely alleviate this printing problem, I find the general lack of consensus on the use of the *tréma* to make its application too subjective and too prescriptive to be particularly useful. Foulet and Speer leave the door open to a more conservative approach to prevent discomfort for the modern reader: “It may be argued, in favor of Roques’s conservative approach, that the introduction of ‘signes diacritiques non usuels’ tends to give the reader who is not a phonetician the feeling that he is deciphering some kind of phonetic transcription instead of reading a literary text” (73).] Because I consider the insertion of other punctuation (e.g. periods, commas, quotation marks, question marks, exclamation points, etc.) to be an intervention on the level of translation, I do not add any other forms of punctuation here. I have, instead, added punctuation to the English translations of the T portraits available in the next part of this chapter. This ‘Extensive’ column aims to present the most legible version of the text to a modern reader, while the other columns clearly show the steps taken to create this final level of legibility.
+- **Nearly Diplomatic:** For manuscripts T-B and T-F^1^, where the text does not conform to standard verse lineation, this supplemental column has been added, presenting the unique way each copy was formatted on the page — T-B with two verses per ruled line separated by a punctus and T-F^1^ in a continuous prose-like style with a punctus inserted to mark the end of each verse. These ‘Nearly Diplomatic’ columns present a transcription with the ‘Minimal’ level of editorial intervention but allow the additional benefit of helping the reader visualize the text as it appears on each manuscript page. With this layout, readers may more easily differentiate between decisions the copyists might have made based on the constraints of their page layout as opposed to their interpretations of the verse. T-F^1^ has been digitized, making it easier to cross-reference the edited transcript with the source manuscript, but T-B has not been digitized, so this column provides a particularly useful supplement to existing resources concerning T-B.[^122]
+- **Minimal:** This column closely mirrors the manuscript’s original text while implementing minor regularizations for clarity — regularizations that do not require situation-specific choices. Thus the letters u/v and i/j are standardized, and proper names like *Marie* and *Deu* are capitalized. Initial and final letter separation is not represented. However, word spacing and punctuation in this column match the original manuscript.[^123] At this stage of the project, the only abbreviation marks represented throughout Appendix 2 are ampersands (&) — standing in for all ‘et’ symbols — and the scribal abbreviation for both ‘con’ and ‘com’ (ꝯ).[^124] This minimal level of intervention allows the edited text to remain as faithful as possible to its material source while improving basic readability.
+- **Intermediate:** In this column, all scribal abbreviations that have been tagged in the XML files are expanded.[^125] For example, the abbreviation `<abbr><orig>Bn</orig></abbr>`  in verse 5 of T-F^1^ becomes `<expan><reg>Bien</reg></expan>`, rendering as “Bien” in Appendix 2. However, all ‘et’ symbols have been left unexpanded since abbreviating this conjunction is still commonly done today and, therefore, does not impede the modern reader’s ability to read the text or a computer’s ability to extract information from this common abbreviation.[^126] Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words. Other editorial choices such as spacing, spelling, or punctuation are excluded at this level, which focuses solely on the expansion of abbreviations.
+- **Extensive:** The rightmost column of each page in the appendix includes the most extensive level of editorial intervention, regularizing word separation (with spaces and apostrophes) and — very rarely — regularizing spelling.[^127] The diacritical marks ‘é’ (‘e’ with an *accent aigu*) and ‘ç’ (‘c’ with the *cédille*) have been added where necessary in this column to help differentiate between homographs.[^128] Because I consider the insertion of other punctuation (e.g. periods, commas, quotation marks, question marks, exclamation points, etc.) to be an intervention on the level of translation, I do not add any other forms of punctuation here. I have, instead, added punctuation to the English translations of the T portraits available in the next part of this chapter. This ‘Extensive’ column aims to present the most legible version of the text to a modern reader, while the other columns clearly show the steps taken to create this final level of legibility.
 
 The utility of breaking down the various interventions this way is to make explicit the nature and purpose of each editorial choice and to prompt reflection on the medieval form of the text. The ‘Minimal’ intervention level presents decisions based on recognizing common usage. For example in the first verse of T-A, the scribe has written the letter forms “vne” rather than “une.” Changing the scribe’s written ‘v’ for a ‘u’ does not change the easily recognizable meaning of this word or insert anything that is not already present in the manuscript and only serves to minorly facilitate this verse’s readability while still clearly showing the extent of the use of abbreviation. By contrast, the ‘Intermediate’ column adds what is absent — though implied to exist — in the manuscript copy. Abbreviations may be explicitly noted by the scribe or not, but scribal notation is not easily interpretable by most modern readers and so this column intervenes by contributing the missing letter forms; the ‘Intermediate’ column, however, still shows the original word spacing.[^129] Finally, the ‘Extensive’ column further shapes the text by adding features that a medieval reader would not have needed but that a modern reader would anticipate finding in a modern edition. These ‘extensive’ changes are far more ad hoc and depend a great deal on the judgement of the editor, but because features like apostrophes and capitalization are expectations of the modern reader, these sorts of intervention typically go entirely unnoticed. By distinguishing these levels of intervention so explicitly, the edition foregrounds the editorial process itself. It invites readers to notice the cumulative work required to render the medieval text legible to modern eyes and, in doing so, continually reminds them of the material manuscript that underlies it. In this way, the edition’s design enacts key principles articulated in Chapter 1: respect for the medieval source material and clarity around the human labor that reshapes it.
 
@@ -74,7 +74,7 @@ The primary aim of my text encoding strategy is to ensure that each editorial ch
 ## Excerpt of T-E (Portrait 2, vv.613-702)
 The selected verses below comprise the second portrait of Mary as she lives ascetically in the desert, a passage in which the T-E copyist inserts a few unique whole verses and word choices (vv.614, 650-652, 668, 676, & 700). I have selected the following passage of T-E to illustrate my digital editing methods on a smaller scale than the material featured in all of Appendix 2. I chose to isolate T-E here due to several unique aspects of this copy. First, T-E has received little attention as a witness of Version T because it is incomplete; approximately sixty verses are missing near the end of the narrative due to the mutilation of folio 117. If intact, T-E would provide the longest extant witness of Version T as well as the only miniature of Mary the Egyptian associated with T (now lost). Because T-E is a somewhat more difficult manuscript copy to read — featuring text that is highly abbreviated and inconsistent in word spacing — T-E more clearly demonstrates the benefit of my editorial approach which presents a transcription of T-E with increasing levels of editorial intervention. For this excerpt, I have also inserted special characters to represent the many scribal abbreviations present in the manuscript. These special characters have been selected in alignment with the recommendations of the Medieval Unicode Font Initiative (MUFI), a group of scholars and font designers committed to helping medievalists encode and display special characters found in medieval texts written in the Latin alphabet. Such special characters do not properly render in all fonts, but Junicode — a font developed by Peter Baker of the University of Virginia — has been designed for optimal compatibility with the MUFI guidelines. Thus, the Junicode font family has been applied to this entire dissertation project. The following directory specifies which codes have been used to render each of the special characters present in this excerpt of T-E, including screengrabs from the digitized manuscript for reference:
 
-### Directory of Special Characters:^[For macron abbreviations involving vowels (ā, ē, ī, and ō), special character codes were not necessary.]
+### Directory of Special Characters:[^132]
 +---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
 | Graphemes                                                                             | Code       | Description                                          | Use                            |
 +=======================================================================================+============+======================================================+================================+
